[package]
name = "sentinelkit-advanced"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web.workspace = true
futures-util.workspace = true
sentinelkit-contract = { path = "../sentinelkit-contract" }
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = "9"
