[package]
name = "sentinelkit-security-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web.workspace = true
futures-util.workspace = true
sentinelkit-contract = { path = "../sentinelkit-contract" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
redis = "0.27"
